# chms_api_examples

./: .gitignore  LICENSE  README.md
java/: .gitignore  README.md  config-sample.properties  settings.gradle
java/app/: build.gradle
java/app/src/main/java/com/churchcommunitybuilder/: Accept.java  App.java  CcbApi.java  ClientJsonAuthentication.java  Main.java  Requests.java  RestClient.java
java/app/src/test/java/com/churchcommunitybuilder/: AppTest.java
nodejs/: README.md  index.js  package-lock.json  package.json
nodejs/views/: index.pug
php/: .gitignore  Makefile  README.md  composer.json  config-sample.properties  env.sample
php/server/: index.php
php/src/: CCBProvider.php  CCBRequestFactory.php  index.php
php/src/CCB/: Api.php  CredentialStorage.php  GuzzleFactory.php  OAuth2.php  OAuth2Credentials.php  OAuth2Exception.php  OAuth2UnauthorizedException.php  Server.php  SimpleCredentialStorage.php
php/src/Ccb/: Api.php  CredentialStorage.php  GuzzleFactory.php  OAuth2.php  OAuth2Credentials.php  OAuth2Exception.php  OAuth2UnauthorizedException.php  Persistence.php  Server.php  SimpleCredentialStorage.php  SimplePersistence.php
php/src/ccb_api_example/: index.php
python/: Makefile  README.md  requirements.txt  server.py
python/app/: constants.py  request.py  state.py  token.py
python/templates/: index.html  layout.html  request-integration.html
rust/: .gitignore  Cargo.toml
rust/src/: db.rs  main.rs
rust/src/utils/: api.rs  env.rs  mod.rs
